--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -26,6 +26,36 @@ http {
     gzip_comp_level 6;
     gzip_types text/plain text/css text/xml text/javascript application/json application/javascript application/xml+rss application/rss+xml font/truetype font/opentype application/vnd.ms-fontobject image/svg+xml;
 
+    # ============================================
+    # RATE LIMITING & DDoS PROTECTION
+    # ============================================
+
+    # Rate limit zones (10MB can track ~160,000 IP addresses)
+
+    # General API rate limit: 10 requests per second per IP
+    limit_req_zone $binary_remote_addr zone=general_limit:10m rate=10r/s;
+
+    # Face recognition endpoints: 2 requests per second per IP (CPU intensive)
+    limit_req_zone $binary_remote_addr zone=face_api_limit:10m rate=2r/s;
+
+    # Health check endpoint: 5 requests per second per IP
+    limit_req_zone $binary_remote_addr zone=health_limit:10m rate=5r/s;
+
+    # Connection limit: 10 concurrent connections per IP
+    limit_conn_zone $binary_remote_addr zone=conn_limit:10m;
+
+    # Limit request body size to prevent memory exhaustion
+    client_body_buffer_size 128k;
+
+    # Connection timeout to prevent slowloris attacks
+    client_body_timeout 10s;
+    client_header_timeout 10s;
+    send_timeout 10s;
+
+    # ============================================
+    # UPSTREAM
+    # ============================================
+
     # Upstream to face recognition service
     upstream face_recognition {
         server face-recognition:8000;
@@ -63,8 +93,57 @@ http {
         add_header X-XSS-Protection "1; mode=block" always;
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
-        # Proxy settings
-        location / {
+        # Apply connection limit to all requests
+        limit_conn conn_limit 10;
+
+        # Face recognition endpoints - STRICT rate limiting (CPU intensive)
+        location ~ ^/api/v1/(compare-photos|extract-embedding) {
+            # Rate limit: 2 req/s, burst 5, delay additional requests
+            limit_req zone=face_api_limit burst=5 nodelay;
+
+            # Return 429 Too Many Requests with custom message
+            limit_req_status 429;
+
+            proxy_pass http://face_recognition;
+            proxy_http_version 1.1;
+
+            # Proxy headers
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Host $server_name;
+
+            # Extended timeouts for face processing
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 60s;
+            proxy_read_timeout 60s;
+
+            # Buffer settings
+            proxy_buffering on;
+            proxy_buffer_size 4k;
+            proxy_buffers 8 4k;
+            proxy_busy_buffers_size 8k;
+        }
+
+        # Health check endpoint - LENIENT rate limiting
+        location /api/v1/health {
+            # Rate limit: 5 req/s, burst 10
+            limit_req zone=health_limit burst=10 nodelay;
+            limit_req_status 429;
+
+            proxy_pass http://face_recognition/api/v1/health;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            access_log off;
+        }
+
+        # General API endpoints - MODERATE rate limiting
+        location /api/ {
+            # Rate limit: 10 req/s, burst 20, delay additional requests
+            limit_req zone=general_limit burst=20 nodelay;
+            limit_req_status 429;
+
             proxy_pass http://face_recognition;
             proxy_http_version 1.1;
 
@@ -87,12 +166,32 @@ http {
             proxy_busy_buffers_size 8k;
         }
 
-        # Health check endpoint
-        location /api/v1/health {
-            proxy_pass http://face_recognition/api/v1/health;
+        # Static content and documentation - MODERATE rate limiting
+        location / {
+            # Rate limit: 10 req/s, burst 20
+            limit_req zone=general_limit burst=20 nodelay;
+            limit_req_status 429;
+
+            proxy_pass http://face_recognition;
             proxy_http_version 1.1;
+
+            # Proxy headers
             proxy_set_header Host $host;
-            access_log off;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Host $server_name;
+
+            # Timeouts
+            proxy_connect_timeout 30s;
+            proxy_send_timeout 30s;
+            proxy_read_timeout 30s;
+
+            # Buffer settings
+            proxy_buffering on;
+            proxy_buffer_size 4k;
+            proxy_buffers 8 4k;
+            proxy_busy_buffers_size 8k;
         }
     }
 }
