feat: add API token authentication and update configuration for security settings

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,14 @@ API_V1_PREFIX=/api/v1
 DEBUG=false
 
 # ============================================================================
+# Security Settings
+# ============================================================================
+# API Bearer Token for endpoint authorization
+# IMPORTANT: Generate a secure random token for production use
+# Example: openssl rand -hex 32
+API_TOKEN=your-secure-random-token-here-change-this-in-production
+
+# ============================================================================
 # Server Settings
 # ============================================================================
 HOST=0.0.0.0
