--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,23 +3,18 @@ events {
 }
 
 http {
-    # Basic settings
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
-
-    # Logging
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
 
-    # Performance
     sendfile on;
     tcp_nopush on;
     tcp_nodelay on;
     keepalive_timeout 65;
     types_hash_max_size 2048;
-    client_max_body_size 20M;  # Allow larger file uploads for images
+    client_max_body_size 20M;
 
-    # Gzip compression
     gzip on;
     gzip_vary on;
     gzip_proxied any;
@@ -30,24 +25,12 @@ http {
     # RATE LIMITING & DDoS PROTECTION
     # ============================================
 
-    # Rate limit zones (10MB can track ~160,000 IP addresses)
-
-    # General API rate limit: 10 requests per second per IP
     limit_req_zone $binary_remote_addr zone=general_limit:10m rate=10r/s;
-
-    # Face recognition endpoints: 2 requests per second per IP (CPU intensive)
     limit_req_zone $binary_remote_addr zone=face_api_limit:10m rate=2r/s;
-
-    # Health check endpoint: 5 requests per second per IP
     limit_req_zone $binary_remote_addr zone=health_limit:10m rate=5r/s;
-
-    # Connection limit: 10 concurrent connections per IP
     limit_conn_zone $binary_remote_addr zone=conn_limit:10m;
 
-    # Limit request body size to prevent memory exhaustion
     client_body_buffer_size 128k;
-
-    # Connection timeout to prevent slowloris attacks
     client_body_timeout 10s;
     client_header_timeout 10s;
     send_timeout 10s;
@@ -56,30 +39,38 @@ http {
     # UPSTREAM
     # ============================================
 
-    # Upstream to face recognition service
     upstream face_recognition {
         server face-recognition:8000;
     }
 
-    # HTTP server - redirect to HTTPS
+    # ============================================
+    # HTTP SERVER - CERTBOT CHALLENGE & REDIRECT
+    # ============================================
+
     server {
         listen 80;
-        server_name _;
+        server_name face-recognition.shelia.holo.my.id;
 
-        # Redirect all HTTP requests to HTTPS
-        return 301 https://$host$request_uri;
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
+
+        location / {
+            return 301 https://$host$request_uri;
+        }
     }
 
-    # HTTPS server
+    # ============================================
+    # HTTPS SERVER
+    # ============================================
+
     server {
         listen 443 ssl http2;
-        server_name _;
+        server_name face-recognition.shelia.holo.my.id;
 
-        # SSL certificates
-        ssl_certificate /etc/nginx/ssl/cert.pem;
-        ssl_certificate_key /etc/nginx/ssl/key.pem;
+        ssl_certificate /etc/letsencrypt/live/face-recognition.shelia.holo.my.id/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/face-recognition.shelia.holo.my.id/privkey.pem;
 
-        # SSL configuration - Strong security settings
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers 'ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384';
         ssl_prefer_server_ciphers off;
@@ -87,48 +78,37 @@ http {
         ssl_session_cache shared:SSL:50m;
         ssl_session_tickets off;
 
-        # Security headers
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-Content-Type-Options "nosniff" always;
         add_header X-XSS-Protection "1; mode=block" always;
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
-        # Apply connection limit to all requests
         limit_conn conn_limit 10;
 
-        # Face recognition endpoints - STRICT rate limiting (CPU intensive)
         location ~ ^/api/v1/(compare-photos|extract-embedding) {
-            # Rate limit: 2 req/s, burst 5, delay additional requests
             limit_req zone=face_api_limit burst=5 nodelay;
-
-            # Return 429 Too Many Requests with custom message
             limit_req_status 429;
 
             proxy_pass http://face_recognition;
             proxy_http_version 1.1;
 
-            # Proxy headers
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header X-Forwarded-Host $server_name;
 
-            # Extended timeouts for face processing
             proxy_connect_timeout 60s;
             proxy_send_timeout 60s;
             proxy_read_timeout 60s;
 
-            # Buffer settings
             proxy_buffering on;
             proxy_buffer_size 4k;
             proxy_buffers 8 4k;
             proxy_busy_buffers_size 8k;
         }
 
-        # Health check endpoint - LENIENT rate limiting
         location /api/v1/health {
-            # Rate limit: 5 req/s, burst 10
             limit_req zone=health_limit burst=10 nodelay;
             limit_req_status 429;
 
@@ -138,56 +118,46 @@ http {
             access_log off;
         }
 
-        # General API endpoints - MODERATE rate limiting
         location /api/ {
-            # Rate limit: 10 req/s, burst 20, delay additional requests
             limit_req zone=general_limit burst=20 nodelay;
             limit_req_status 429;
 
             proxy_pass http://face_recognition;
             proxy_http_version 1.1;
 
-            # Proxy headers
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header X-Forwarded-Host $server_name;
 
-            # Timeouts
             proxy_connect_timeout 60s;
             proxy_send_timeout 60s;
             proxy_read_timeout 60s;
 
-            # Buffer settings
             proxy_buffering on;
             proxy_buffer_size 4k;
             proxy_buffers 8 4k;
             proxy_busy_buffers_size 8k;
         }
 
-        # Static content and documentation - MODERATE rate limiting
         location / {
-            # Rate limit: 10 req/s, burst 20
             limit_req zone=general_limit burst=20 nodelay;
             limit_req_status 429;
 
             proxy_pass http://face_recognition;
             proxy_http_version 1.1;
 
-            # Proxy headers
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header X-Forwarded-Host $server_name;
 
-            # Timeouts
             proxy_connect_timeout 30s;
             proxy_send_timeout 30s;
             proxy_read_timeout 30s;
 
-            # Buffer settings
             proxy_buffering on;
             proxy_buffer_size 4k;
             proxy_buffers 8 4k;
