--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,36 @@
-# Shelia Face Recognition Service - Environment Configuration
-# Copy this file to .env and customize as needed
+# Shelia Face Recognition Service - Environment Configuration Template
+# Copy this file to .env and customize the values for your VPS and domain
+
+# ============================================================================
+# DEPLOYMENT CONFIGURATION
+# ============================================================================
+# Container naming prefix (used for all container names)
+# Default: shelia
+CONTAINER_PREFIX=shelia
+
+# Restart policy for containers
+# Options: no, always, unless-stopped, on-failure
+RESTART_POLICY=unless-stopped
+
+# Internal Docker network name (for service-to-service communication)
+# Default: face-recognition-network
+INTERNAL_NETWORK_NAME=face-recognition-network
+
+# External Docker network name (for external service communication)
+# Default: proxy-network
+EXTERNAL_NETWORK_NAME=proxy-network
+
+# ============================================================================
+# DOMAIN & SSL CONFIGURATION
+# ============================================================================
+# Your domain name - UPDATE THIS WITH YOUR OWN DOMAIN
+# Example: api.yourdomain.com
+DOMAIN_NAME=face-recognition.example.com
+
+# Email for Let's Encrypt SSL certificate
+# Used by certbot for SSL certificate registration
+# Example: admin@yourdomain.com
+LETSENCRYPT_EMAIL=admin@example.com
 
 # ============================================================================
 # API Settings
@@ -14,7 +45,7 @@ DEBUG=false
 # ============================================================================
 # API Bearer Token for endpoint authorization
 # IMPORTANT: Generate a secure random token for production use
-# Example: openssl rand -hex 32
+# Generate with: openssl rand -hex 32
 API_TOKEN=your-secure-random-token-here-change-this-in-production
 
 # ============================================================================
@@ -51,6 +82,7 @@ EMBEDDING_SIZE=512
 # Device Settings
 # ============================================================================
 # Device: cpu or cuda
+# Use 'cuda' if your VPS has GPU support
 DEVICE=cpu
 
 # ONNX Runtime providers (comma-separated, auto-configured if not set)
@@ -69,7 +101,16 @@ MAX_IMAGE_SIZE=10485760
 # ALLOWED_IMAGE_FORMATS=jpg,jpeg,png,bmp,webp
 
 # ============================================================================
-# Performance Settings
+# Performance & Resource Settings
 # ============================================================================
 # Request timeout in seconds
 REQUEST_TIMEOUT=30
+
+# Docker resource limits for face-recognition service
+# Adjust based on your VPS capabilities
+FACE_RECOGNITION_CPU_LIMIT=2
+FACE_RECOGNITION_MEMORY_LIMIT=2G
+
+# Docker resource reservations (guaranteed resources)
+FACE_RECOGNITION_CPU_RESERVATION=1
+FACE_RECOGNITION_MEMORY_RESERVATION=1G
