feat: integrate Cloudflare API for DNS-01 SSL validation and update deployment guide

--- a/.env.example
+++ b/.env.example
@@ -32,6 +32,13 @@ DOMAIN_NAME=face-recognition.example.com
 # Example: admin@yourdomain.com
 LETSENCRYPT_EMAIL=admin@example.com
 
+# Cloudflare API Token for DNS Challenge (DNS-01 validation)
+# Generate at: https://dash.cloudflare.com/profile/api-tokens
+# Permissions needed: Zone.Zone:Read, Zone.DNS:Edit
+# This enables automatic SSL certificate generation and renewal via DNS validation
+# Required file: certbot/credentials/cloudflare.ini (create from template)
+CLOUDFLARE_API_TOKEN=your_cloudflare_api_token_here
+
 # ============================================================================
 # API Settings
 # ============================================================================
