--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -44,18 +44,16 @@ http {
     }
 
     # ============================================
-    # HTTP SERVER - CERTBOT CHALLENGE & REDIRECT
+    # HTTP SERVER - REDIRECT TO HTTPS
     # ============================================
+    # Note: DNS challenge validation is handled by certbot, no .well-known path needed
 
     server {
         listen 80;
         # ⚠️ TEMPLATE: Replace {{DOMAIN_NAME}} with your domain (e.g., api.yourdomain.com)
         server_name {{DOMAIN_NAME}};
 
-        location /.well-known/acme-challenge/ {
-            root /var/www/certbot;
-        }
-
+        # All HTTP traffic is redirected to HTTPS
         location / {
             return 301 https://$host$request_uri;
         }
@@ -74,12 +72,18 @@ http {
         ssl_certificate /etc/letsencrypt/live/{{DOMAIN_NAME}}/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/{{DOMAIN_NAME}}/privkey.pem;
 
+        # TLS Configuration - Cloudflare Compatible
         ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers 'ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384';
+        ssl_ciphers 'ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA384';
         ssl_prefer_server_ciphers off;
         ssl_session_timeout 1d;
         ssl_session_cache shared:SSL:50m;
         ssl_session_tickets off;
+        ssl_stapling on;
+        ssl_stapling_verify on;
+        ssl_stapling_cache shared:STAPLING:10m;
+        resolver 8.8.8.8 8.8.4.4 1.1.1.1 valid=300s;
+        resolver_timeout 5s;
 
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-Content-Type-Options "nosniff" always;
