--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,12 @@
-version: '3.8'
-
 services:
   certbot:
-    image: certbot/certbot
+    image: certbot/dns-cloudflare
     container_name: ${CONTAINER_PREFIX:-shelia}-certbot
     volumes:
       - ./nginx/ssl:/etc/letsencrypt
       - ./nginx/certbot-webroot:/var/www/certbot
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+      - ./cloudflare.ini:/cloudflare.ini:ro
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew --dns-cloudflare --dns-cloudflare-credentials /cloudflare.ini; sleep 12h & wait $${!}; done;'"
     networks:
       - ${INTERNAL_NETWORK_NAME}
 
