feat: remove shelia related things

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,12 @@
-# Shelia Face Recognition Service - Environment Configuration Template
+# Face Recognition Service - Environment Configuration Template
 # Copy this file to .env and customize the values for your VPS and domain
 
 # ============================================================================
 # DEPLOYMENT CONFIGURATION
 # ============================================================================
 # Container naming prefix (used for all container names)
-# Default: shelia
-CONTAINER_PREFIX=shelia
+# Default: app
+CONTAINER_PREFIX=app
 
 # Restart policy for containers
 # Options: no, always, unless-stopped, on-failure
@@ -42,7 +42,7 @@ CLOUDFLARE_API_TOKEN=your_cloudflare_api_token_here
 # ============================================================================
 # API Settings
 # ============================================================================
-APP_NAME=Shelia Face Recognition Service
+APP_NAME=Face Recognition Service
 APP_VERSION=0.1.0
 API_V1_PREFIX=/api/v1
 DEBUG=false
